# ml-projects

./: README.md
.github/workflows/: lint.yml  test.yml
chessmate/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
chessmate/src/: main.py
