[project]
name = "chessmate"
version = "0.1.0"
description = "AlphaZero-lite: Train a neural network to play chess"
requires-python = ">=3.10"
dependencies = [
    "python-chess",
    "torch",
    "numpy",
    "matplotlib",
    "tqdm",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
